<resources>
    <string name="app_name">MovilesFinal</string>

    <string name="buzon">Buzón</string>

    <string name="carrera">Carrera</string>
    <string name="departamento">Departamento</string>
    <string name="mensaje">Mensaje</string>
    <string name="mensaje_hint">Introduce tu mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="enviando">Enviando…</string>
    <string name="title_activity_maps">Punto seleccionado</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
